* Dev - Styles for single team page if banner is disabled.
* Dev - Set the region archive map to a zoom level of 10
* Dev - Enabled the sorting of Gallery images
* Dev - Added in a sticky order field to destinations to allow  sticky posts functionality
* Dev - Added in a "lsx_to_post_type_widget_query_args" to allow 3rd Party plugins to alter the queries.
* Fix - Added in a function to clear the term cache when ordering, so the order reflects immediately.
* Fix - Fixing the returning variables of the destinations template tags.

### 1.3.0 - 2 October 2019
* Fix - Fixed the Post Type enquiry dropdown.
* Dev - Added in a view more disable for the post type widget
* Dev - Adding the .gitattributes file to remove unnecessary files from the WordPress version.
* Dev - Added in a 'lsx_to_maps_args' to allow plugins to alter the map arguments before output.
* Dev - Added in a 'lsx_to_has_maps_location' to allow plugins to alter the map arguments before output.
* Dev - Added lazyloading for the TO Slick sliders.
* Dev - Added in a 'lsx_to_map_override' to allow 3rd party plugins to overrider the map before it generates.
* Dev - Changing the single template width.
* Dev - Added the possibility to call the form set on the options of each post type if the archive page requires it.
* Dev - Updated the compatible version notice
* Dev - Added in the Schema for accommodation / destinations / tours, using the Yoast API.
* Fix - Fix for the reviews thumbnails.
* Fix - Making 'Best Time' show only if it has content.
* Fix - Updating the gallery thumbnail image size.
* Fix - Fixing PHP issue 'Invalid argument supplied for foreach()'.
* Fix - Changing the priority of the enqueued assets.

### 1.2.0 - 6 August 2019
* Fix - Hiding the banner title on regions when the map is set to output there.
* Dev - Made sure the regions also move the map to the banner when the setting is activated.
* Dev - PHP Class updates.
* Dev - Removing old templates.